--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -24,7 +24,7 @@ main:
   #  url: /year-archive/
     
   - title: "CV"
-    url: /cv/
+    url: /files/ricard_jr_cv.pdf
     
   # - title: "CV"
   #   url: /cv-json/
