--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,6 +8,10 @@
 #      Markdown formatted page while the second is generated using JSON.
 
 main:
+
+  - title: "CV"
+    url: /files/ricard_jr_cv.pdf
+  
   - title: "Publications"
     url: /publications/
 
@@ -22,12 +26,10 @@ main:
         
   #- title: "Blog Posts"
   #  url: /year-archive/
-    
-  - title: "CV"
-    url: /files/ricard_jr_cv.pdf
+  
     
   # - title: "CV"
   #   url: /cv-json/
     
-  - title: "Guide"
-    url: /markdown/
+  # - title: "Guide"
+  #   url: /markdown/
