--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 
 # Basic Site Settings
 locale                   : "en-US"
-site_theme               : "default"
+site_theme               : "contrast"
 title                    : "Jordyn R. Ricard"
 title_separator          : "-"
 name                     : &name "Jordyn Ricard"
